fix: overflow providers

--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -49,7 +49,21 @@
 
     .container-with-cards {
       margin-top: 2vh;
-      align-self: flex-start;
+      /* align-self: flex-start; */
+      width: 100%;
+      gap: 0;
+      min-height: 100%;
+      gap: 20px;
+      /* min-height: 76vh; */
+      box-sizing: border-box;
+      /* width: 100%; */
+      /* justify-content: space-between; */
+      align-items: center;
+      height: 90vh;
+      /* display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start; */
     }
 
     .nav-btn-wrapper {
@@ -89,6 +103,9 @@
       width: 100%;
       align-items: center;
       max-width: 638px;
+      overflow-y: auto;
+      overflow-x: hidden;
+      justify-content: center;
     }
   
     .card-container-emojie {
@@ -219,6 +236,14 @@
       padding: 0 20px;
       margin-bottom: 20px;
     }
+
+    .container-unqualified {
+      gap: 24px;
+      margin-top: 15vh;
+      /* align-items: center;
+      justify-content: center; */
+    }
+    
   
     .otp-container {
       width: 450px;
