--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -236,7 +236,7 @@ textarea::placeholder {
 
 .container-unqualified {
   gap: 24px;
-  margin-top: 15vh;
+  /* margin-top: 15vh; */
   /* align-items: center;
   justify-content: center; */
 }
